--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieOnlineStreamingApp"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Activities.CommentActivity"></activity>
         <activity android:name=".Activities.MoviePlayActivity" />
         <activity android:name=".Activities.TrailerPlayActivity" />
         <activity android:name=".Activities.ActorDetailActivity" />
